edml-common/.kubernetes/prometheus-kube.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edml-prometheus
  namespace: default
  labels:
    app: edml-prometheus
spec:
  selector:
    matchLabels:
      app: edml-prometheus
  template:
    metadata:
      labels:
        app: edml-prometheus
    spec:
      containers:
        - name: edml-prometheus
          image: prom/prometheus:v2.8.1
          readinessProbe:
            httpGet:
              path: /graph
              port: 9090
          ports:
            - name: prometheus-port
              containerPort: 9090
          volumeMounts:
            - name: edml-prometheus-conf
              mountPath: /etc/config
          args:
            - --config.file=/etc/config/prometheus.yaml
      volumes:
        - name: edml-prometheus-conf
          configMap:
            name: edml-prometheus-conf
---
apiVersion: v1
kind: Service
metadata:
  name: edml-prometheus-service
  namespace: default
  labels:
    app: edml-prometheus
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9090
  selector:
    app: edml-prometheus

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    kubernetes.io/ingress.global-static-ip-name: prometheus-ip
  labels:
    app: edml-prometheus
spec:
  rules:
    - host: prometheus.xebilolo.com
  backend:
    serviceName: edml-prometheus-service
    servicePort: 80
